--- a/requirements.txt
+++ b/requirements.txt
@@ -1,27 +1,45 @@
-accelerate==0.26.1
-certifi==2023.11.17
-charset-normalizer==3.3.2
-colorama==0.4.6
-filelock==3.13.1
-fsspec==2023.12.2
-huggingface-hub==0.20.3
-idna==3.6
-Jinja2==3.1.3
-MarkupSafe==2.1.4
-mpmath==1.3.0
-networkx==3.2.1
-numpy==1.26.3
-packaging==23.2
-psutil==5.9.8
-PyAudio==0.2.14
-PyYAML==6.0.1
-regex==2023.12.25
-requests==2.31.0
-safetensors==0.4.2
-sympy==1.12
-tokenizers==0.15.1
-torch==2.1.2
-tqdm==4.66.1
-transformers==4.37.1
-typing_extensions==4.9.0
-urllib3==2.1.0
+# This file may be used to create an environment using:
+# $ conda create --name <env> --file <this file>
+# platform: win-64
+accelerate=0.26.1=pypi_0
+bzip2=1.0.8=he774522_0
+ca-certificates=2023.12.12=haa95532_0
+certifi=2023.11.17=pypi_0
+charset-normalizer=3.3.2=pypi_0
+colorama=0.4.6=pypi_0
+filelock=3.13.1=pypi_0
+fsspec=2023.12.2=pypi_0
+huggingface-hub=0.20.3=pypi_0
+idna=3.6=pypi_0
+jinja2=3.1.3=pypi_0
+libffi=3.4.4=hd77b12b_0
+markupsafe=2.1.4=pypi_0
+mpmath=1.3.0=pypi_0
+networkx=3.2.1=pypi_0
+numpy=1.26.3=pypi_0
+openssl=3.0.12=h2bbff1b_0
+packaging=23.2=pypi_0
+pip=23.3.1=py311haa95532_0
+psutil=5.9.8=pypi_0
+pyaudio=0.2.14=pypi_0
+python=3.11.5=he1021f5_0
+pyyaml=6.0.1=pypi_0
+regex=2023.12.25=pypi_0
+requests=2.31.0=pypi_0
+safetensors=0.4.2=pypi_0
+setuptools=68.2.2=py311haa95532_0
+sqlite=3.41.2=h2bbff1b_0
+sympy=1.12=pypi_0
+tk=8.6.12=h2bbff1b_0
+tokenizers=0.15.1=pypi_0
+torch=2.1.2=pypi_0
+tqdm=4.66.1=pypi_0
+transformers=4.37.1=pypi_0
+typing-extensions=4.9.0=pypi_0
+tzdata=2023d=h04d1e81_0
+urllib3=2.1.0=pypi_0
+vc=14.2=h21ff451_1
+vs2015_runtime=14.27.29016=h5e58377_2
+wheel=0.41.2=py311haa95532_0
+xz=5.4.5=h8cc25b3_0
+zlib=1.2.13=h8cc25b3_0
