--- a/environment.yml
+++ b/environment.yml
@@ -1,61 +1,61 @@
 name: pandora-bot
 channels:
-  pytorch
-  nvidia
-  conda-forge
-  defaults
+  - pytorch
+  - nvidia
+  - conda-forge
+  - defaults
 dependencies:
-  accelerate=0.26.1
-  aiohttp=3.9.1
-  attrs=23.2.0
-  aws-c-auth=0.7.11
-  blas=2.121=mkl
-  brotli-python=1.1.0
-  bzip2=1.0.8
-  c-ares=1.26.0
-  ca-certificates
-  certifi
-  charset-normalizer=3.3.2
-  colorama=0.4.6
-  cuda=12.1.0
-  cudatoolkit=12.1.0
-  datasets=2.16.1
-  dill=0.3.7
-  huggingface_hub=0.20.2
-  idna=3.6
-  jinja2=3.1.3
-  libblas=3.9.0=mkl
-  libcurl=8.5.0
-  libffi=3.4.2
-  liblapack=3.9.0=mkl
-  numpy=1.26.3
-  openssl=3.2.0
-  pandas=2.2.0
-  pillow=10.2.0
-  pip=23.3.2
-  python=3.11.5
-  python-dateutil=2.8.2
-  pytorch=2.1.2=py3.11_cuda12.1_cudnn8_0
-  pyyaml=6.0.1
-  requests=2.31.0
-  scipy=1.12.0
-  setuptools=69.0.3
-  six=1.16.0
-  sympy=1.12
-  tk=8.6.13
-  tqdm=4.66.1
-  transformers=4.37.1
-  urllib3=2.1.0
-  wheel=0.42.0
-  xz=5.2.6
-pip:
-  bitsandbytes==0.41.0
-  cramjam==2.8.1
-  fastparquet==2023.10.1
-  ninja==1.11.1.1
-  protobuf==4.25.2
-  pygments==2.17.2
-  sentencepiece==0.1.99
-  torchaudio==2.1.2
-  torchvision==0.16.2
-  websockets==12.0
+  - accelerate=0.26.1
+  - aiohttp=3.9.1
+  - attrs=23.2.0
+  - aws-c-auth=0.7.11
+  - blas=2.121=mkl
+  - brotli-python=1.1.0
+  - bzip2=1.0.8
+  - c-ares=1.26.0
+  - ca-certificates
+  - certifi
+  - charset-normalizer=3.3.2
+  - colorama=0.4.6
+  - cuda=12.1.0
+  - cudatoolkit=12.1.0
+  - datasets=2.16.1
+  - dill=0.3.7
+  - huggingface_hub=0.20.2
+  - idna=3.6
+  - jinja2=3.1.3
+  - libblas=3.9.0=mkl
+  - libcurl=8.5.0
+  - libffi=3.4.2
+  - liblapack=3.9.0=mkl
+  - numpy=1.26.3
+  - openssl=3.2.0
+  - pandas=2.2.0
+  - pillow=10.2.0
+  - pip=23.3.2
+  - python=3.11.5
+  - python-dateutil=2.8.2
+  - pytorch=2.1.2=py3.11_cuda12.1_cudnn8_0
+  - pyyaml=6.0.1
+  - requests=2.31.0
+  - scipy=1.12.0
+  - setuptools=69.0.3
+  - six=1.16.0
+  - sympy=1.12
+  - tk=8.6.13
+  - tqdm=4.66.1
+  - transformers=4.37.1
+  - urllib3=2.1.0
+  - wheel=0.42.0
+  - xz=5.2.6
+  - pip:
+    - bitsandbytes==0.41.0
+    - cramjam==2.8.1
+    - fastparquet==2023.10.1
+    - ninja==1.11.1.1
+    - protobuf==4.25.2
+    - pygments==2.17.2
+    - sentencepiece==0.1.99
+    - torchaudio==2.1.2
+    - torchvision==0.16.2
+    - websockets==12.0
