--- a/environment.yml
+++ b/environment.yml
@@ -1,222 +1,14 @@
 name: pandora-bot
 channels:
-  - pytorch
-  - nvidia
-  - nvidia/label/cuda-12.1.0
   - conda-forge
   - defaults
 dependencies:
-  - accelerate=0.26.1
-  - aiohttp=3.9.1
-  - aiosignal=1.3.1
-  - attrs=23.2.0
-  - aws-c-auth=0.7.11
-  - aws-c-cal=0.6.9
-  - aws-c-common=0.9.12
-  - aws-c-compression=0.2.17
-  - aws-c-event-stream=0.4.1
-  - aws-c-http=0.8.0
-  - aws-c-io=0.14.0
-  - aws-c-mqtt=0.10.1
-  - aws-c-s3=0.4.9
-  - aws-c-sdkutils=0.1.13
-  - aws-checksums=0.1.17
-  - aws-crt-cpp=0.26.0
-  - aws-sdk-cpp=1.11.210
-  - blas=2.121
-  - blas-devel=3.9.0
-  - brotli-python=1.1.0
-  - bzip2=1.0.8
-  - c-ares=1.26.0
-  - ca-certificates=2023.11.17
-  - certifi=2023.11.17
-  - charset-normalizer=3.3.2
-  - colorama=0.4.6
-  - cuda=12.1.0
-  - cuda-cccl=12.1.55
-  - cuda-command-line-tools=12.1.0
-  - cuda-compiler=12.1.0
-  - cuda-cudart=12.1.55
-  - cuda-cudart-dev=12.1.55
-  - cuda-cuobjdump=12.1.55
-  - cuda-cupti=12.1.62
-  - cuda-cuxxfilt=12.1.55
-  - cuda-demo-suite=12.1.55
-  - cuda-documentation=12.1.55
-  - cuda-libraries=12.1.0
-  - cuda-libraries-dev=12.1.0
-  - cuda-nsight-compute=12.1.0
-  - cuda-nvcc=12.1.66
-  - cuda-nvdisasm=12.1.55
-  - cuda-nvml-dev=12.1.55
-  - cuda-nvprof=12.1.55
-  - cuda-nvprune=12.1.55
-  - cuda-nvrtc=12.1.55
-  - cuda-nvrtc-dev=12.1.55
-  - cuda-nvtx=12.1.66
-  - cuda-nvvp=12.1.55
-  - cuda-opencl=12.1.56
-  - cuda-opencl-dev=12.1.56
-  - cuda-profiler-api=12.1.55
-  - cuda-runtime=12.1.0
-  - cuda-sanitizer-api=12.1.55
-  - cuda-toolkit=12.1.0
-  - cuda-tools=12.1.0
-  - cuda-visual-tools=12.1.0
-  - datasets=2.16.1
-  - dill=0.3.7
-  - filelock=3.13.1
-  - freetype=2.12.1
-  - frozenlist=1.4.1
-  - fsspec=2023.10.0
-  - huggingface_hub=0.20.2
-  - idna=3.6
-  - importlib-metadata=7.0.1
-  - intel-openmp=2024.0.0
-  - jinja2=3.1.3
-  - krb5=1.21.2
-  - lcms2=2.16
-  - lerc=4.0.0
-  - libabseil=20230802.1
-  - libarrow=14.0.2
-  - libarrow-acero=14.0.2
-  - libarrow-dataset=14.0.2
-  - libarrow-flight=14.0.2
-  - libarrow-flight-sql=14.0.2
-  - libarrow-gandiva=14.0.2
-  - libarrow-substrait=14.0.2
-  - libblas=3.9.0
-  - libbrotlicommon=1.1.0
-  - libbrotlidec=1.1.0
-  - libbrotlienc=1.1.0
-  - libcblas=3.9.0
-  - libcrc32c=1.1.2
-  - libcublas=12.1.0.26
-  - libcublas-dev=12.1.0.26
-  - libcufft=11.0.2.4
-  - libcufft-dev=11.0.2.4
-  - libcurand=10.3.2.56
-  - libcurand-dev=10.3.2.56
-  - libcurl=8.5.0
-  - libcusolver=11.4.4.55
-  - libcusolver-dev=11.4.4.55
-  - libcusparse=12.0.2.55
-  - libcusparse-dev=12.0.2.55
-  - libdeflate=1.19
-  - libevent=2.1.12
-  - libexpat=2.5.0
-  - libffi=3.4.2
-  - libgoogle-cloud=2.12.0
-  - libgrpc=1.59.3
-  - libhwloc=2.9.3
-  - libiconv=1.17
-  - libjpeg-turbo=3.0.0
-  - liblapack=3.9.0
-  - liblapacke=3.9.0
-  - libnpp=12.0.2.50
-  - libnpp-dev=12.0.2.50
-  - libnvjitlink=12.1.105
-  - libnvjitlink-dev=12.1.55
-  - libnvjpeg=12.1.0.39
-  - libnvjpeg-dev=12.1.0.39
-  - libnvvm-samples=12.1.55
-  - libparquet=14.0.2
-  - libpng=1.6.39
-  - libprotobuf=4.24.4
-  - libre2-11=2023.06.02
-  - libsqlite=3.44.2
-  - libssh2=1.11.0
-  - libthrift=0.19.0
-  - libtiff=4.6.0
-  - libutf8proc=2.8.0
-  - libuv=1.44.2
-  - libwebp-base=1.3.2
-  - libxcb=1.15
-  - libxml2=2.12.4
-  - libzlib=1.2.13
-  - lz4-c=1.9.4
-  - m2w64-gcc-libgfortran=5.3.0
-  - m2w64-gcc-libs=5.3.0
-  - m2w64-gcc-libs-core=5.3.0
-  - m2w64-gmp=6.1.0
-  - m2w64-libwinpthread-git=5.0.0.4634.697f757
-  - markupsafe=2.1.4
-  - mkl=2024.0.0
-  - mkl-devel=2024.0.0
-  - mkl-include=2024.0.0
-  - mpmath=1.3.0
-  - msys2-conda-epoch=20160418
-  - multidict=6.0.4
-  - multiprocess=0.70.15
-  - networkx=3.2.1
-  - nsight-compute=2023.1.0.15
-  - numpy=1.26.3
-  - openjpeg=2.5.0
-  - openssl=3.2.0
-  - orc=1.9.2
-  - packaging=23.2
-  - pandas=2.2.0
-  - pillow=10.2.0
-  - pip=23.3.2
-  - portaudio=19.6.0
-  - psutil=5.9.8
-  - pthread-stubs=0.4
-  - pthreads-win32=2.9.1
-  - pyarrow=14.0.2
-  - pyarrow-hotfix=0.6
-  - pyaudio=0.2.11
-  - pysocks=1.7.1
   - python=3.11.5
-  - python-dateutil=2.8.2
-  - python-tzdata=2023.4
-  - python-xxhash=3.4.1
-  - python_abi=3.11
-  - pytorch=2.1.2
+  - cuda
+  - pytorch
   - pytorch-cuda=12.1
-  - pytorch-mutex=1.0
-  - pytz=2023.3.post1
-  - pyyaml=6.0.1
-  - re2=2023.06.02
-  - regex=2023.12.25
-  - requests=2.31.0
-  - safetensors=0.3.3
-  - setuptools=69.0.3
-  - six=1.16.0
-  - snappy=1.1.10
-  - sympy=1.12
-  - tbb=2021.11.0
-  - tk=8.6.13
-  - tokenizers=0.15.1
-  - tqdm=4.66.1
-  - transformers=4.37.1
-  - typing-extensions=4.9.0
-  - typing_extensions=4.9.0
-  - tzdata=2023d
-  - ucrt=10.0.22621.0
-  - urllib3=2.1.0
-  - vc=14.3
-  - vc14_runtime=14.38.33130
-  - vs2015_runtime=14.38.33130
-  - wheel=0.42.0
-  - win_inet_pton=1.1.0
-  - xorg-libxau=1.0.11
-  - xorg-libxdmcp=1.1.3
-  - xxhash=0.8.2
-  - xz=5.2.6
-  - yaml=0.2.5
-  - yarl=1.9.4
-  - zipp=3.17.0
-  - zstd=1.5.5
-  - pip:
-      - bitsandbytes==0.41.0
-      - cramjam==2.8.1
-      - exllamav2==0.0.12+cu121
-      - fastparquet==2023.10.1
-      - ninja==1.11.1.1
-      - protobuf==4.25.2
-      - pygments==2.17.2
-      - scipy==1.12.0
-      - sentencepiece==0.1.99
-      - torchaudio==2.1.2
-      - torchvision==0.16.2
-      - websockets==12.0
+  - torchaudio
+  - torchvision
+  - pyaudio
+  - conda-forge::transformers
+  - accelerate
